# rust-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/entities/: mod.rs  prelude.rs  user.rs
crates/database/src/repositories/: user.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: error.rs  main.rs
crates/http-server/src/extractors/: mod.rs  security.rs  state.rs
crates/http-server/src/handlers/auth/: login.rs  mod.rs
crates/http-server/src/handlers/user/: me.rs
crates/shared/: Cargo.toml
crates/shared/src/: env.rs  lib.rs  logging.rs
pgdata/production/data/: postmaster.pid
pgdata/production/data/base/13756/: 1247  1249  1259  16386  16392  16393  16397  16398  16404  16405  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
pgdata/production/data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
pgdata/production/data/pg_stat_tmp/: db_0.stat  db_13756.stat  global.stat
prisma/: schema.prisma
prisma/migrations/20250310110010_init/: migration.sql
src/: handlers.rs  main.rs  models.rs  routers.rs
