[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
warp = { workspace = true }
axum-macros = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
axum-derive-error = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }


database = { path = "../database" }
shared = { path = "../shared" }
